# oop-1

./: CMakeLists.txt  main.cpp
Document/: Document.cpp  Document.h
EMail/: EMail.cpp  EMail.h
Person/: Person.cpp  Person.h
